--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Melrose Cabailo-Junior Web Developer</title>
-<link rel="stylesheet" href="css/styles.css"/>
+<link rel="stylesheet" href="css/styles.css"/>  
 </head>
 <body>
    <h1>Melrose Cabailo</h1> 
    <h2>Junior Web Developer</h2>
+   <p>
+    I am a new programmer,willing to learn.
+   </p>
 </body>
 </html>
