--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Melrose Cabailo-Junior Web Developer</title>
-<link rel="stylesheet" href="CSS/styles.css"/>  
+<link rel="stylesheet" href="CSS/styles.CSS"/>  
 </head>
 <body>
+    <img 
+    id="my-anya" 
+    src="images/mp4.jpeg"
+     alt="my favorite anime character"/>
    <h1>Melrose Cabailo</h1> 
    <h2>Junior Web Developer</h2>
    <p>
