--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="CSS/styles.CSS"/>  
 </head>
 <body>
+    <main id="content">
     <img 
     id="my-anya" 
     src="images/mp4.jpeg"
@@ -17,5 +18,6 @@
    <p>
     I am a new programmer,willing to learn.
    </p>
+</main>
 </body>
 </html>
