add header color and fonts types

--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 <link rel="stylesheet" href="CSS/styles.CSS"/>  
 </head>
 <body>
+    <header>
+        <nav id="left-side">
+            <a href="./index.html">Home</a>
+            <a href="./projects.html">projects</a>
+        </nav>
+        <nav id="right-side">
+            <a href="https://github.com/meyangcabailo">Github Profile</a>
+        </nav>
+        </header>
     <main id="content">
     <img 
     id="my-anya" 
     src="images/mp4.jpeg"
      alt="my favorite anime character"/>
-   <h1>Melrose Cabailo</h1> 
+   <h1 id="my-name">Melrose Cabailo</h1> 
    <h2>Junior Web Developer</h2>
    <p>
     I am a new programmer,willing to learn.
