add link to linked profile

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
     I am a new programmer,willing to learn.
    </p>
 </main>
+<footer>
+    <a href="https://www.linkedin.com/in/ 
+    melrose-cabailo-102b17259">linkedIn</a>
+    <a href="https://freecodecamp.org/meyangcabailo">Free code camp</a>
+</footer>
 </body>
 </html>
