--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Melrose Cabailo-Junior Web Developer</title>
-<link rel="stylesheet" href="CSS/styles.CSS"/>  
+<link rel="stylesheet" href="CSS/styles.css"/>  
 </head>
 <body>
     <header>
@@ -18,19 +18,21 @@
         </nav>
         </header>
     <main id="content">
+        <div>
     <img 
     id="my-anya" 
     src="images/mp4.jpeg"
-     alt="my favorite anime character"/>
+     alt="my favorite anime character"
+     />
    <h1 id="my-name">Melrose Cabailo</h1> 
    <h2>Junior Web Developer</h2>
    <p>
     I am a new programmer,willing to learn.
    </p>
+   </div>
 </main>
 <footer>
-    <a href="https://www.linkedin.com/in/ 
-    melrose-cabailo-102b17259">linkedIn</a>
+    <a href="https://www.linkedin.com/meyangcabailo">linkedIn</a>
     <a href="https://freecodecamp.org/meyangcabailo">Free code camp</a>
 </footer>
 </body>
