--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Melrose Cabailo - Projects</title>
     <link rel="stylesheet" href="CSS/styles.css" type="text/CSS"/>
 
 </head>
@@ -18,6 +18,23 @@
     <a href="https://github.com/meyangcabailo">Github Profile</a>
 </nav>
 </header>
+<section id="hero-banner">
+    <div>
+    <img 
+    id="my-anya" 
+    src="images/mp4.jpeg"
+     alt="my favorite anime character"
+     />
+     <div>
+   <h1 id="my-name">Melrose Cabailo</h1> 
+   <h2>Junior Web Developer</h2>
+    </div>
+    </div>
+</section>
 <h1>Projects</h1>
+<footer>
+    <a href="https://www.linkedin.com/meyangcabailo">linkedIn</a>
+    <a href="https://freecodecamp.org/meyangcabailo">Free code camp</a>
+</footer>
 </body>
 </html>
